# bot-project

./: .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: main.yml
python-bot/: bot.py
pythonbot/: bot.py
pythonbot/tests/: test_bot.py
