[tool.poetry]
name = "bot-project"
version = "1.0.1"
description = "Script to fill out website forms with fake data"
authors = ["jediknight112, charlielin1988"]
license = "License :: OSI Approved :: MIT License"
packages = [
    { include = "pythonbot" },
]

[tool.poetry.scripts]
bot = "pythonbot.bot:main"

[tool.poetry.dependencies]
python = "^3.9"
argparse = "^1.4.0"
Faker = "^18.3.0"
pandas = "^1.5.3"
selenium = "^4.8.2"
webdriver-manager = "^3.8.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
flake8 = "^4.0.1"
pytest-cov = "^3.0.0"
mock = "^5.0.1"

[tool.pytest.ini_options]
testpaths = ["pythonbot/"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
