[flake8]
exclude = .git
max-line-length = 120

[metadata]
name = pythonbot
author = jediknight112, charlielin1988
author_email = n/a
description = Script to fill out website forms with fake data
url = https://github.com/charlielin1988/bot-project

[options]
packages =
    pythonbot/

[options.entry_points]
console_scripts =
    bot = pythonbot.bot:main
